--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,9 @@
-[workspace]
-members = ["bevy"]
-resolver = "2"
+[package]
+name = "game-of-life-rs"
+version = "0.1.0"
+description = ""
+edition = "2021"
+
+[dependencies]
+bevy = { version = "0.15.3" }
+rand = { version = "0.9.1" }
